progress bar ana nbr etat traité