@@ -1,17 +1,41 @@
-package rubikssolver.algorithms;
-
-import rubikssolver.cube.RubiksCube;
-import rubikssolver.cube.RubiksCubeMixer;
+package algorithms;
 
 import java.lang.reflect.InvocationTargetException;
+import java.util.ArrayList;
 import java.util.LinkedList;
 
 public class LargeurAlgorithm extends SolvingAlgorithm {
 
 	static final String[] methodNames = new String[]{"up","upInverted","left","leftInverted","right","rightInverted","back","backInverted","down","downInverted","front","frontInverted"};
 	 String initialCubeTester=initialCube.getState();
-	 
+	 int etatsGenerés,etatsabondoné,niveau=0; 
 	 RubiksCube cube=initialCube;
+	 
+	 private static int lastPercent;
+	 
+	 public static void updatePercentageBar(float progress) {
+	     int percent = (int) Math.round(progress * 100);
+	     if (Math.abs(percent - lastPercent) >= 1) {
+	         StringBuilder template = new StringBuilder("\r[");
+	         for (int i = 0; i < 50; i++) {
+	             if (i < percent * .5) {
+	                 template.append("=");
+	             } else if (i == percent * .5) {
+	                 template.append(">");
+	             } else {
+	                 template.append(" ");
+	             }
+	         }
+	         template.append("] %s   ");
+	         if (percent >= 100) {
+	             template.append("%n");
+	         }
+	         System.out.printf(template.toString(), percent + "%");
+	         lastPercent = percent;
+	     }
+	 }
+	 
+	 
 	 public void rotateCube(int rotation){
 	    try {
 	    	cube.getClass().getMethod(methodNames[rotation]).invoke(cube);
@@ -24,34 +48,28 @@ public class LargeurAlgorithm extends SolvingAlgorithm {
 		super(cube);
 	}
 
-    boolean exists(int rotations){
-    	int [] rotationTable= new int[8];
+    boolean exists(long rotations){
+    	long [] rotationTable= new long[8];
     	int rotation = 0,nbrRotation=0;
-    	
+
     	while(rotations!=0){
     		rotationTable[rotation++]= rotations & 0x000F;
     		rotations= rotations>>4;
     		nbrRotation++;
-    	}
+    	}	nbrRotation++;
     	for(int i=0;i<nbrRotation-1;i++){
     		if((rotationTable[i]-1)%2==0){
     			if(rotationTable[i]==(rotationTable[i+1]-1)){
-    				return false;
-    			}
-    		}else{
-    			if(rotationTable[i]==rotationTable[i+1]+1){
-    				return false;
-    			}
-    		}
+
     		int k=i;
     		while(rotationTable[k]-1==rotationTable[k+1]-1){k++;}
-    		if((k-i)>3){return false;}
+    		if((k-i)>3){etatsabondoné++;return false;}
     	}
     	
 		return false;
     }
-    boolean ResulteState(int rotations){
-    	int [] rotationTable= new int[8];
+    boolean ResulteState(long rotations){
+    	long [] rotationTable= new long[8];
     	int rotation = 0,nbrRotation=0;
   
     	while(rotations!=0){
@@ -60,7 +78,7 @@ public class LargeurAlgorithm extends SolvingAlgorithm {
     		nbrRotation++;
     	}
     	for(int i=0;i<nbrRotation;i++){
-    		rotateCube(rotationTable[i]-1);
+    		rotateCube((int)(rotationTable[i]-1));
     		}
     	if(cube.isSolved()){
     		return true;
@@ -69,20 +87,38 @@ public class LargeurAlgorithm extends SolvingAlgorithm {
 				return false;}
 		
     }
+    
 	protected void doOperation() {
-		LinkedList<Integer> BigFile= new LinkedList<>();
-		for(int i=1;i <= 12;i++ ){
+		ArrayList<Long> BigFile= new ArrayList<Long>();
+		for(long i=1;i <= 12;i++ ){
 			BigFile.add(i);
 		}
+		niveau++;
 		boolean Trouvé= false;
-		int currentState = 0;
-		while(!BigFile.isEmpty() && !Trouvé   ){
-			currentState=BigFile.removeFirst();
+		long currentState = 0;
+		int niveuCompteur=0;
+		int indiceNiveau=12;
+		float currentPourcentage=0;
+		while(!BigFile.isEmpty() && !Trouvé ){
+			niveuCompteur++;
+			currentState=BigFile.remove(0);
 			if(!exists(currentState)){
-				if(ResulteState(currentState)){
-					Trouvé=true;
+				if(ResulteState(currentState)){	Trouvé=true;
 				}else{	
-					int TobeAdd;
+					long TobeAdd;
+					etatsGenerés++;
+					if(niveuCompteur>indiceNiveau){
+						niveau++;
+						indiceNiveau=BigFile.size();
+						niveuCompteur=0;
+						System.out.println("\nniveau "+niveau);
+					}
+					if((int)( niveuCompteur/(float)(indiceNiveau+1)*100) !=(int) currentPourcentage)
+					{
+						updatePercentageBar((niveuCompteur/(float)(indiceNiveau)));
+					
+					//System.out.print((int) (niveuCompteur/(float)(indiceNiveau)*100)+"% ");
+					currentPourcentage=niveuCompteur/(float)(indiceNiveau)*100;}
 					for(int i=1;i <= 12;i++ ){
 						TobeAdd=currentState<<4 ;
 						TobeAdd=TobeAdd + i ;
@@ -92,9 +128,12 @@ public class LargeurAlgorithm extends SolvingAlgorithm {
 			}
 		}
     	while(currentState!=0){
-    		steps.add(RubiksCubeMixer.methodNames[(currentState & 0x000F)-1]);
+    		steps.add(RubiksCubeMixer.methodNames[(int)(currentState & 0x0000000F)-1]);
     		currentState= currentState>>4;
 			}
+    	System.out.println("\nignored: "+etatsabondoné);
+    	System.out.println("traité: "+etatsGenerés);
+    	System.out.println("niveau "+niveau);
 	}
 
 }
